k8s-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wiz-web-app
  template:
    metadata:
      labels:
        app: wiz-web-app
    spec:
      serviceAccountName: wiz-app-sa
      containers:
      - name: wiz-web-app
        image: us-central1-docker.pkg.dev/clgcporg10-185/wiz-repo/wiz-web-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
# 2. Service annotated to link the BackendConfig
apiVersion: v1
kind: Service
metadata:
  name: wiz-web-service
  annotations:
    cloud.google.com/backend-config: '{"default": "wiz-web-backend-config"}'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: wiz-web-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiz-web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiz-web-service
            port:
              number: 80
